app-of-apps/nemesh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nemesh
  labels:
    name: nemesh
    project: nemesh
    managed-by: backstage-template
    created-by: backstage
  annotations:
    backstage.io/project-name: "nemesh"
spec: {}
