app-of-apps/nemesh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nemesh-web
  namespace: nemesh
  labels:
    app: nemesh-web
spec:
  selector:
    app: nemesh-web
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
