app-of-apps/nemesh/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nemesh-web
  namespace: nemesh
spec:
  hosts:
  - nemesh-web.idp.saastack.io
  gateways:
  - istio-system/gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nemesh-web
        port:
          number: 3000
